@@ -25,6 +25,7 @@ AC_INIT(server.c)
 AC_CONFIG_HEADER(config.h:config.in)
 
 AC_PROG_CC
+AC_GNU_SOURCE
 
 AC_CANONICAL_SYSTEM
 
@@ -40,6 +41,7 @@ AC_CHECK_HEADERS(sgtty.h termio.h termios.h sys/reg.h string.h dnl
  		 errno.h fcntl.h signal.h sys/file.h malloc.h dnl
 		 sys/ioctl.h netinet/in.h sys/socket.h netdb.h dnl
 		 netinet/tcp.h arpa/inet.h sys/wait.h)
+AC_CHECK_FUNCS(pread64)
 
 have_errno=no
 AC_MSG_CHECKING(for errno)
